Update package.json and fix wrong less import

--- a/sass/mixins/text/_text.scss
+++ b/sass/mixins/text/_text.scss
@@ -1,5 +1,5 @@
 //=====================================================================
 // Text Mixins
 //=====================================================================
-@import 'text-overflow.less';
-@import 'text-emphasis.less';
+@import 'text-overflow';
+@import 'text-emphasis';
