update some depedencies

--- a/sass/backend.sass
+++ b/sass/backend.sass
@@ -3,6 +3,8 @@
 @import "components/backend-button"
 @import "components/backend-container"
 @import "components/backend-dashboard"
+@import "components/backend-datepicker"
+@import "components/backend-file-upload"
 @import "components/backend-typography"
 @import "components/backend-header"
 @import "components/backend-login"
